# cppviews

./: .gitignore  Makefile.am  configure.ac
bench/: Makefile.am  mm.cpp  mm_checker.cpp  mm_test.sh  mm_views.cpp  ra_parse.py  ra_test.sh  smv.hpp  smv_checker.cpp.tpl  smv_facade.hpp  smv_factory.hpp  smv_gen.cpp  smv_run.cpp  smv_run.hpp
bench/gui/: Makefile.am  sm_displayable.cpp  sm_displayable.hpp  smvd.cpp  smvd.hpp  smvd_display.cpp  smvd_display.hpp  smvd_frame.cpp  smvd_frame.hpp  smvd_gui.fbp  smvd_navigator.cpp  smvd_navigator.hpp
bench/gui/sm/: view_tree.cpp  view_tree.hpp  view_type.cpp  view_type.hpp
bench/hpcc/: .gitignore  extract_section.py  foo  hpccoutf.txt
bench/hpcc/PTRANS/: pdtransdriver.c
bench/hpcc/RandomAccess/: allocator.h  core_single_cpu.c  core_single_cpu_lcg.c  view.h
bench/hpcc/hpl/: Make.Linux
bench/hpcc/hpl/include/: hpl_blas.h
bench/hpcc/hpl/testing/matgen/: HPL_ladd.c  HPL_lmul.c
bench/hpcc/src/: io.c
bench/sm/: .fix.grid2_dual.mtx  .gitignore  _common.sh  _gen-common.sh  a5esindl.mtx  all7.hpp  all7_manual.hpp  all7_manual.mtx  check.sh  fix.sh  grid2_dual.mtx  p0040_cdd_manual.hpp  p0040_cdd_manual.smvd  run.sh
bench/sm/armadillo/: facade.hpp  gen.sh
bench/sm/eigen/: facade.hpp  gen.sh
bench/sm/scalaview/: facade.hpp
bench/sm/stl_map/: facade.hpp  gen.sh
bench/sm/stl_unordered_map/: facade.hpp  gen.sh
bench/sm/view/: a5esindl_cd.smvd  all7_manual.hpp  facade.hpp  gen.sh  p0040_cdd.smvd  p0040_cdd_manual.hpp
bench/util/: program_options.hpp  sparse_matrix.hpp
include/: cppviews.h
src/: Makefile.am  chain.hpp  diag.hpp  list.hpp  map.hpp  portion.cpp  portion.hpp  portion_helper.hpp  sparse_list.hpp  view.hpp
src/util/: bit_twiddling.hpp  chunked_array.hpp  fake_pointer.hpp  immutable_skip_list.hpp  intseq.hpp  iterator.hpp  poly_vector.hpp  proxy_pointer.hpp
test/: Makefile.am  asm-trace.gdbinit  asm-trace.sh  chain_test.cpp  diag_chain_test.cpp  diag_speedtest.cpp  diag_test.cpp  list_test.cpp  portion_speedtest.cpp  portion_test.cpp  sparse_list_test.cpp  test.hpp
test/bench/util/: sparse_matrix_test.cpp
test/util/: bit_twiddling.hpp  bit_twiddling_speedtest.cpp  bit_twiddling_test.cpp  bucket_search_vector.hpp  bucket_search_vector_test.cpp  chunked_array_test.cpp  fake_pointer_speedtest.cpp  fake_pointer_test.cpp  immutable_skip_list_speedtest.cpp  immutable_skip_list_test.cpp  intseq_test.cpp  iterator_test.cpp  poly_vector_test.cpp
